unpackaged/main/default/objects/Contact/fields/Subscriptions_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriptions (Recipient)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions (Recipient)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>