unpackaged/main/default/objects/Contact/fields/Subscriptions_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriptions (Subscriber)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions (Subscriber)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>