unpackaged/main/default/objects/Contact/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>a reference to the top most Account in the hierarchy based on the record given on the &quot;Account Name&quot; field.</description>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>