unpackaged/main/default/objects/Contact/recordTypes/Recipient.recordType-meta.xml
<RecordType>
    <fullName>Recipient</fullName>
    <active>false</active>
    <label>Recipient</label>
</RecordType>