unpackaged/main/default/objects/Contact/recordTypes/Subscriber.recordType-meta.xml
<RecordType>
    <fullName>Subscriber</fullName>
    <active>true</active>
    <label>Subscriber</label>
</RecordType>