unpackaged/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(AccountId))  &amp;&amp;  (MailingPostalCode &lt;&gt; Account.ShippingPostalCode)</errorConditionFormula>
    <errorMessage>The contact is NOT in the zip code of its account.</errorMessage>
</ValidationRule>